--- a/.github/workflows/import-api-to-apim.yaml
+++ b/.github/workflows/import-api-to-apim.yaml
@@ -59,7 +59,7 @@ jobs:
           inlineScript: |
             . ./shared-workflows/utilities/Import-UniApimApi.ps1
 
-            Import-UniApimApi ${{ inputs.environment }} ${{ inputs.apiName }} ${{ inputs.apiPath }} ${{ inputs.specificationPath }} -Verbose -ErrorAction Stop
+            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.specificationPath }} -Verbose -ErrorAction Stop
           azPSVersion: "latest"
           errorActionPreference: 'stop'
           failOnStandardError: true
