--- a/.github/workflows/import-api-to-apim.yaml
+++ b/.github/workflows/import-api-to-apim.yaml
@@ -24,7 +24,7 @@ on:
         type: string
         required: true
         description: 'API path to import, without the leading /'
-      specificationPath:
+      OpenApiSpecPath:
         type: string
         required: true
         description: 'Specification path to import, without the leading /'
@@ -59,7 +59,7 @@ jobs:
           inlineScript: |
             . ./shared-workflows/utilities/Import-UniApimApi.ps1
 
-            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.specificationPath }} -Verbose -ErrorAction Stop
+            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.OpenApiSpecPath }} -Verbose -ErrorAction Stop
           azPSVersion: "latest"
           errorActionPreference: 'stop'
           failOnStandardError: true
