Fix GitHub Actions workflow to use dynamic reference for repository

--- a/.github/workflows/import-api-to-apim.yaml
+++ b/.github/workflows/import-api-to-apim.yaml
@@ -48,7 +48,7 @@ jobs:
         with:
           repository: Uniphar/shared-workflows
           path: shared-workflows
-          ref: main
+          ref: ${{ github.ref }}
 
       - name: azure login
         uses: azure/login@v2
@@ -64,7 +64,7 @@ jobs:
           inlineScript: |
             . ./shared-workflows/utilities/Import-UniApimApi.ps1
 
-            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} -UsesCiamLogin ${{ inputs.usesCiamLogin }} -Verbose -ErrorAction Stop
+            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} ${{ inputs.usesCiamLogin }} -Verbose -ErrorAction Stop
           azPSVersion: "latest"
           errorActionPreference: 'stop'
           failOnStandardError: true
