--- a/.github/workflows/import-api-to-apim.yaml
+++ b/.github/workflows/import-api-to-apim.yaml
@@ -63,8 +63,9 @@ jobs:
         with: 
           inlineScript: |
             . ./shared-workflows/utilities/Import-UniApimApi.ps1
-
-            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} ${{ inputs.usesCiamLogin }} -Verbose -ErrorAction Stop
+            $usesCiamLogin = ${{ inputs.usesCiamLogin }}
+            
+            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} $usesCiamLogin -Verbose -ErrorAction Stop
           azPSVersion: "latest"
           errorActionPreference: 'stop'
           failOnStandardError: true
