--- a/.github/workflows/import-api-to-apim.yaml
+++ b/.github/workflows/import-api-to-apim.yaml
@@ -48,7 +48,7 @@ jobs:
         with:
           repository: Uniphar/shared-workflows
           path: shared-workflows
-          ref: feature/policy
+          ref: feature/policy #temporary branch to test the workflow
 
       - name: azure login
         uses: azure/login@v2
@@ -63,8 +63,8 @@ jobs:
         with: 
           inlineScript: |
             . ./shared-workflows/utilities/Import-UniApimApi.ps1
-            $usesCiamLogin = ${{ inputs.usesCiamLogin }}
-            
+            $usesCiamLogin = ${{ inputs.usesCiamLogin }} ? $true : $false
+
             Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} $usesCiamLogin -Verbose -ErrorAction Stop
           azPSVersion: "latest"
           errorActionPreference: 'stop'
