--- a/.github/workflows/import-api-to-apim.yaml
+++ b/.github/workflows/import-api-to-apim.yaml
@@ -64,7 +64,9 @@ jobs:
           inlineScript: |
             . ./shared-workflows/utilities/Import-UniApimApi.ps1
             echo "usesCiamLogin: ${{ inputs.usesCiamLogin }}"
-            $usesCiamLogin = ${{ inputs.usesCiamLogin }} -eq 'true' ? $true : $false
+            $usesCiamLogin = (${{ inputs.usesCiamLogin }} -eq 'true') ? $True : $False
+
+            echo "usesCiamLoginvariable value: $usesCiamLogin"
 
             Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} $usesCiamLogin -Verbose -ErrorAction Stop
           azPSVersion: "latest"
