re-add errorActionPreference and failOnStandardError

--- a/.github/workflows/import-api-to-apim.yaml
+++ b/.github/workflows/import-api-to-apim.yaml
@@ -60,9 +60,11 @@ jobs:
       - name: Import API into APIM
         uses: azure/powershell@v2
         with:
-          azPSVersion: 'latest'
           inlineScript: |
             . ./shared-workflows/utilities/Import-UniApimApi.ps1
             $usesCiamLogin = [System.Convert]::ToBoolean("${{ inputs.usesCiamLogin }}")
 
             Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} $usesCiamLogin -Verbose -ErrorAction Stop
+          azPSVersion: "latest"
+          errorActionPreference: 'stop'
+          failOnStandardError: true
