Add policy template and CIAM login support for API import (#4)
* Add policy template and CIAM login support for API import

* Add default value for CIAM endpoint input in API import workflow

* Fix GitHub Actions workflow to use dynamic reference for repository

* ref fix

* change branch reference for testing

* test adding input value to a variable

* variable refactor

* debug

* more debugging

* fix paths nd remove debugs

* fix path formatting in Import-UniApimApi.ps1

* add debug output for usesCiamLogin in import-api-to-apim workflow

* add debug output for usesCiamLogin in import-api-to-apim workflow

* change to shell

* import Az.ApiManagement module in import-api-to-apim workflow

* refactor import-api-to-apim workflow to use inlineScript and improve usesCiamLogin handling

* fix

* cleanup

* remove pr read permission

* point reference back to main

* re-add errorActionPreference and failOnStandardError

--- a/.github/workflows/import-api-to-apim.yaml
+++ b/.github/workflows/import-api-to-apim.yaml
@@ -28,11 +28,15 @@ on:
         type: string
         required: true
         description: 'Specification path to import, without the leading /'
+      usesCiamLogin:
+        type: boolean
+        required: false
+        description: 'Does the API use the CIAM endpoint'
+        default: false
 
 permissions:
   id-token: write
   contents: read
-  pull-requests: read
 
 jobs:
   import_api_CD:
@@ -55,11 +59,12 @@ jobs:
 
       - name: Import API into APIM
         uses: azure/powershell@v2
-        with: 
+        with:
           inlineScript: |
             . ./shared-workflows/utilities/Import-UniApimApi.ps1
+            $usesCiamLogin = [System.Convert]::ToBoolean("${{ inputs.usesCiamLogin }}")
 
-            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} -Verbose -ErrorAction Stop
+            Import-UniApimApi ${{ inputs.environment }} "${{ inputs.apiName }}" ${{ inputs.apiPath }} ${{ inputs.openApiSpecPath }} $usesCiamLogin -Verbose -ErrorAction Stop
           azPSVersion: "latest"
           errorActionPreference: 'stop'
           failOnStandardError: true
